--- a/src/main/templates/main/panel.html
+++ b/src/main/templates/main/panel.html
@@ -11,9 +11,9 @@
     <div id="pad-wrapper" class="user-profile">
         <!-- header -->
         {% if request.user.is_superuser %}
-        <div class="pull-right">
-            <a class="btn btn-default" href="{% url 'main:company_edit' company.slug %}">Editar</a>
-        </div>
+            <div class="pull-right">
+                <a class="btn btn-default" href="{% url 'main:company_edit' company.slug %}">Editar</a>
+            </div>
         {% endif %}
         <div class="row header">
             <div class="col-md-12">
@@ -35,8 +35,42 @@
                     </div>
 
                     <div class="col-md-12 section">
-                        <h6>{% trans 'contact'|capfirst %}</h6>
-                        <p>{{ company.user }}</p>
+                        <h6>{% trans 'contacts'|capfirst %}</h6>
+                        <div class="pull-right">
+                            <a class="btn btn-default" href="{% url 'main:user_new' company.slug %}">Nuevo Usuario</a>
+                        </div>
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th>Nombre</th>
+                                <th>Usuario</th>
+                                <th>Grupo</th>
+                                <th>Tareas</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>{{ company.user.get_full_name }}</td>
+                                <td>{{ company.user.username }}</td>
+                                <td>ADMIN</td>
+                                <td></td>
+                            </tr>
+                            {% for u in users %}
+                                <tr>
+                                    <td>{{ u.user.get_full_name }}</td>
+                                    <td>{{ u.user.username }}</td>
+                                    <td>{{ u.group }}</td>
+                                    <td>
+{#                                        <a href="{% url 'main:user_edit' company_slug u.pk %}" title="editar"#}
+{#                                           class="btn btn-default"><i class="icon-edit"></i></a>#}
+
+                                    <a href="{% url 'main:user_delete' company.slug u.pk %}" title="eliminar" class="btn btn-default btn-confirm-delete"><i class="icon-remove"></i></a>
+
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
