--- a/src/main/templates/main/requirements/formats/list.html
+++ b/src/main/templates/main/requirements/formats/list.html
@@ -36,7 +36,7 @@
                     <tbody>
                     {% for format in formats_pdf %}
                         <tr>
-                            <td><a href="{{ format.file.url }}" download="{{ format.file.file }}"><i class="icon-download"></i> {{ format.name }}</a></td>{% if request.user.is_superuser %}
+                            <td><a href="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ format.file.url }}" download="{{ format.file.file }}"><i class="icon-download"></i> {{ format.name }}</a></td>{% if request.user.is_superuser %}
                             <td>
                                 <div>
                                     <button type="button" class="btn btn-default" data-toggle="modal"
@@ -75,7 +75,7 @@
                                                         <tbody>
                                                         {% for history in format.history %}
                                                             <tr>
-                                                                <td align="left"><a href="{{ history.file.url }}" target='_blank'>{{ history.file }}</a></td>
+                                                                <td align="left"><a href="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ history.file.url }}" target='_blank'>{{ history.file }}</a></td>
                                                                 <td align="left">{{ history.date_time }}</td>
                                                             </tr>
                                                         {% endfor %}
@@ -122,7 +122,7 @@
 
                     {% for format in formats_xlsx %}
                         <tr>
-                            <td><a href="{{ format.file.url }}" download="{{ format.file.file }}"> <i class="icon-download"></i> {{ format.name }}</a></td>
+                            <td><a href="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ format.file.url }}" download="{{ format.file.file }}"> <i class="icon-download"></i> {{ format.name }}</a></td>
                         {% if request.user.is_superuser %}
                             <td>
                                 <div>
@@ -160,7 +160,7 @@
                                                         <tbody>
                                                         {% for history in format.history %}
                                                             <tr>
-                                                                <td align="left"><a href="{{ history.file.url }}" target='_blank'>{{ history.file }}</a></td>
+                                                                <td align="left"><a href="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ history.file.url }}" target='_blank'>{{ history.file }}</a></td>
                                                                 <td align="left">{{ history.date_time }}</td>
                                                             </tr>
                                                         {% endfor %}
