--- a/src/main/templates/main/requirements/formats/list.html
+++ b/src/main/templates/main/requirements/formats/list.html
@@ -36,7 +36,7 @@
                     <tbody>
                     {% for format in formats_pdf %}
                         <tr>
-                            <td><a href="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ format.file.url }}" download="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ format.file.url }}"><i class="icon-download"></i> {{ format.name }}</a></td>{% if request.user.is_superuser %}
+                            <td><a href="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ format.file.url }}" ><i class="icon-download"></i> {{ format.name }}</a></td>{% if request.user.is_superuser %}
                             <td>
                                 <div>
                                     <button type="button" class="btn btn-default" data-toggle="modal"
@@ -122,7 +122,7 @@
 
                     {% for format in formats_xlsx %}
                         <tr>
-                            <td><a href="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ format.file.url }}" download="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ format.file.url }}"> <i class="icon-download"></i> {{ format.name }}</a></td>
+                            <td><a href="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ format.file.url }}" > <i class="icon-download"></i> {{ format.name }}</a></td>
                         {% if request.user.is_superuser %}
                             <td>
                                 <div>
