--- a/src/main/templates/main/requirements/formats/list.html
+++ b/src/main/templates/main/requirements/formats/list.html
@@ -31,12 +31,12 @@
                         <td><b>Opciones</b></td>
                         {% endif %}
                     </tr>
-                    </thead>
+111                    </thead>
 
                     <tbody>
                     {% for format in formats_pdf %}
                         <tr>
-                            <td><a href="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ format.file.url }}" ><i class="icon-download"></i> {{ format.name }}</a></td>{% if request.user.is_superuser %}
+                            <td><a target='_blank' href="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ format.file.url }}" ><i class="icon-download"></i> {{ format.name }}</a></td>{% if request.user.is_superuser %}
                             <td>
                                 <div>
                                     <button type="button" class="btn btn-default" data-toggle="modal"
@@ -75,7 +75,8 @@
                                                         <tbody>
                                                         {% for history in format.history %}
                                                             <tr>
-                                                                <td align="left"><a href="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ history.file.url }}" target='_blank'>{{ history.file }}</a></td>
+                                                                <td align="left">
+                                                                    <a href="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ history.file.url }}" target='_blank'>{{ history.file }}</a></td>
                                                                 <td align="left">{{ history.date_time }}</td>
                                                             </tr>
                                                         {% endfor %}
@@ -122,7 +123,7 @@
 
                     {% for format in formats_xlsx %}
                         <tr>
-                            <td><a href="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ format.file.url }}" > <i class="icon-download"></i> {{ format.name }}</a></td>
+                            <td><a href="https://view.officeapps.live.com/op/view.aspx?src={{ domain }}{{ format.file.url }}" target="_blank"> <i class="icon-download"></i> {{ format.name }}</a></td>
                         {% if request.user.is_superuser %}
                             <td>
                                 <div>
