--- a/src/main/templates/main/requirements/formats/list.html
+++ b/src/main/templates/main/requirements/formats/list.html
@@ -31,7 +31,7 @@
                         <td><b>Opciones</b></td>
                         {% endif %}
                     </tr>
-111                    </thead>
+                    </thead>
 
                     <tbody>
                     {% for format in formats_pdf %}
