update format list

--- a/src/main/templates/main/requirements/formats/list.html
+++ b/src/main/templates/main/requirements/formats/list.html
@@ -131,7 +131,7 @@
                                             data-target="#formatForm{{ format.pk }}"
                                             data-whatever="r4">Historial
                                     </button>
-                                    <a href="{% url 'main:format_update' company_slug requirement_pk format.vi pk %}"
+                                    <a href="{% url 'main:format_update' company_slug requirement_pk format.pk %}"
                                        class="btn btn-default">Actualizar</a>
                                 </div>
                             {% endif %}
